<resources>
    <string name="app_name">Jaktlaget</string>
    <string name="app_title">Jaktlaget</string>
    <string name="email">Peder.Aursand@gmail.com</string>
    <string name="menu_map">Kart</string>
    <string name="menu_team">Jegere</string>
    <string name="menu_help">Hjelp</string>
    <string name="menu_team_manage">Jaktlaget</string>
    <string name="menu_landmarks">Kartmerker</string>
    <string name="menu_team_landmarks">Lagets kartmerker</string>
    <string name="menu_settings">Innstillinger</string>
    <string name="menu_about">Om appen</string>
    <string name="actionbar_active">AKTIV</string>
    <string name="actionbar_inactive">INAKTIV</string>
    <string name="action_stop">Stopp</string>
    <string name="action_map">Til kart</string>
    <string name="help_header_1">1: Opprett et lag</string>
    <string name="help_1">Du oppretter et lag ved å velge et lagnavn. Hvis laget ikke allerede
        eksisterer vil det genereres en adgangskode du kan dele med andre.</string>
    <string name="help_header_2">2: Få med andre</string>
    <string name="help_2">Du finner all informasjon om laget du er med i under menyvalget JAKTLAGET. Her
    kan du finne koden du kan dele med andre for at de skal bli med i jaktlaget ditt.</string>
    <string name="help_header_3">3: Gå aktiv</string>
    <string name="help_3">Når alle som skal være med har sluttet seg til laget er man klar til å ta appen i bruk. Når jakten starter skrur alle på knappen AKTIV øverst i høyre hjørne. Så lenge denne knappen er på, vil din posisjon deles med resten av laget.</string>
    <string name="pref_category_usage">Appbruk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="column_description">Beskrivelse</string>
    <string name="column_user">Jeger</string>
    <string name="column_show">Vis?</string>
    <string name="column_share">Del?</string>
    <string name="column_last_update">Sist oppdatert</string>
    <string name="lm_list_user">Jeger</string>
    <string name="lm_list_lat">Breddegrad: %s</string>
    <string name="lm_list_long">Lengdegrad: %s</string>
    <string name="run_stop">Posisjonsdeling startet</string>
    <string name="run_start">Posisjonsdeling stoppet</string>
    <string name="cant_start">Velg lag før du kan starte posisjonsdeling</string>
    <string name="lm_dialog_title">Nytt kartmerke</string>
    <string name="lm_delete_title">Slett kartmerke?</string>
    <string name="lm_ok">Legg til</string>
    <string name="lm_cancel">Avbryt</string>
    <string name="lm_delete">Slett</string>
    <string name="lm_update">OK</string>
    <string name="lm_title">Rediger kartmerke</string>
    <string name="trace_remove_dialog">Slett alle spor?</string>
    <string name="trace_remove">Slett</string>
    <string name="trace_remove_abort">Avbryt</string>
    <string name="traces_deleted">Alle spor slettet</string>
    <string name="reset_team_dialog">Forlat lag</string>
    <string name="reset_team_text">Er du sikker på at du vil forlate %s? Du vil miste adgangskoden hvis du ikke skriver den
        ned.</string>
    <string name="description_hint">Beskrivelse</string>
    <string name="landmark_added">Kartmerke lagt til</string>
    <string name="toast_no_user_no_sync">Kan ikke synkronisere uten gyldig brukernavn</string>
    <string name="toast_no_team_no_sync">Kan ikke synkronisere uten gyldig jaktlag</string>
    <string name="toast_sync_success">Synkronisering vellykket</string>
    <string name="toast_sync_timeout">Fikk ikke kontakt med server</string>
    <string name="toast_invalid_username">Ugyldig brukernavn</string>
    <string name="toast_username_saved">Brukernavn oppdatert</string>
    <string name="toast_invalid_teamname">Ugyldig lagnavn</string>
    <string name="toast_invalid_name">Ugyldig brukernavn eller lagnavn</string>
    <string name="toast_teamname_saved">Lagnavn oppdatert</string>
    <string name="toast_name_saved">Brukernavn og lagnavn oppdatert</string>
    <string name="toast_no_contact_server">Fikk ikke kontakt med server</string>
    <string name="toast_no_team_or_user">Vennligst oppgi brukernavn og lagnavn</string>
    <string name="toast_wrong_code">Feil lagkode</string>
    <string name="toast_sync_failed">Synkronisering mislyktes</string>
    <string name="toast_weather_cooldown">Vent litt med å hente mer værdata</string>
    <string name="empty_team_list">Ingen lagmedlemmer</string>
    <string name="empty_landmarks">Ingen kartmerker</string>
    <string name="weather_sync_dialog">Henter vær..</string>
    <string name="intro">Denne appen lar et jaktlag dele sin posisjon og kartmerker med hverandre i
                        sanntid. Hvis du oppretter et nytt lag vil du få en adgangskode som du kan
                        dele med jaktlaget ditt. Hvis du vil bli med i et allerede eksisterende lag
                        trenger du å få adgangskode fra et av medlemmene.</string>
    <string name="choose_new_team">Opprett nytt lag</string>
    <string name="intro_join_existing">Bli med i eksisterende lag</string>
    <string name="intro_no_team">Bruk appen uten jaktlag</string>
    <string name="save_name_button">Lagre</string>
    <string name="share_team_button">Del kode</string>
    <string name="update_team_button">Velg jaktlag</string>
    <string name="reset_team_button">Forlat</string>
    <string name="reset_form_button">Nullstill</string>
    <string name="teamname_hint">Lagnavn</string>
    <string name="teamcode_hint">Adgangskode for laget</string>
    <string name="username_hint">Jegernavn</string>
    <string name="wrong_code">Ugyldig adganskode</string>
    <string name="send_to">Velg hvordan du vil dele lagekoden</string>
    <string name="notification_title">Jaktlaget</string>
    <string name="notification_message">Deler din posisjon med laget</string>
    <string name="ticker_text">Posisjonsdeling</string>
    <string name="less_than_1_min">Mindre enn 1 min</string>
    <string name="more_than_1_hour">Mer enn 1 time</string>
    <string name="minutes">%s min</string>
    <string name="pref_category_sync">Synkronisering</string>
    <string name="pref_category_map">Kart</string>
    <string name="pref_category_weather">Vind</string>
    <string name="pref_autoshowteam_key">pref_autoshowteam</string>
    <string name="pref_autoshowteam">Vis lagmedlemmer</string>
    <string name="pref_autoshowteam_summary">Automatisk vis nye lagmedlemmer på kart</string>
    <string name="pref_autoshowteam_default">true</string>
    <string name="pref_autoshowlm_key">pref_autoshowlm</string>
    <string name="pref_autoshowlm">Vis lagets kartmerker</string>
    <string name="pref_autoshowlm_summary">Automatisk vis importerte kartmerker på kart</string>
    <string name="pref_syncInterval_key">pref_syncInterval</string>
    <string name="pref_syncInterval">Synkroniseringsintervall</string>
    <string name="pref_syncInterval_summary">Hvor ofte appen synkroniserer i bakgrunnen</string>
    <string name="pref_syncInterval_dialog">Velg intervall for oppdatering av lagets posisjoner</string>
    <string name="pref_syncInterval_default">5</string>
    <string name="pref_hideoldteam_key">pref_hideoldteam</string>
    <string name="pref_hideoldteam">Skjul utdaterte lagposisjoner</string>
    <string name="pref_hideoldteam_summary">Skjul markører for lagmedlemmer med utdatert posisjon</string>
    <string name="pref_hideteamlimit_key">pref_hideteamlimit</string>
    <string name="pref_hideteamlimit">Utløpstid for posisjoner</string>
    <string name="pref_hideteamlimit_summary">Tid uten oppdateringer før lagmedlemmer vises som grå på kartet</string>
    <string name="pref_hideteamlimit_dialog">Velg ny utløpstid</string>
    <string name="pref_hideteamlimit_default">30</string>
    <string name="pref_windprovider_key">pref_windprovider</string>
    <string name="pref_windprovider">Værtjenese</string>
    <string name="pref_windprovider_summary">Værtjeneste for henting av vinddata</string>
    <string name="pref_windprovider_dialog">Velg værtjeneste</string>
    <string name="pref_windprovider_default">yr.no</string>
    <string name="landmarks_info">Legge til kartmerker</string>
    <string name="landmarks_info_message">Trykk og hold på et sted på kartet for å legge til et nytt kartmerke</string>
    <string name="landmarks_info_ok">Jeg forstår</string>
    <string name="pref_map_type_key">pref_map_type</string>
    <string name="pref_map_type">Kartformat</string>
    <string name="pref_map_summary">Oppløsning for kartblad</string>
    <string name="pref_map_type_dialog">Velg kartformat</string>
    <string name="pref_map_type_default">png</string>
    <string name="hunter_name">Jegernavn:</string>
    <string name="team_name">Jaktlag:</string>
    <string name="code">Adgangskode:</string>
    <string name="leave_team">Forlat lag</string>
    <string name="show_team">Jegere</string>
    <string name="alert_reset_title">Nullstill kart-spor?</string>
    <string name="alert_reset_message">Du er nå aktiv. Ønsker du å nullstille gamle kart-spor?</string>
    <string name="alert_reset_positive">Nullstill</string>
    <string name="alert_reset_negative">Behold</string>
    <string name="hide_traces">Skjul spor</string>
    <string name="show_traces">Vis spor</string>
    <string name="hide_landmarks">Skjul kartmerker</string>
    <string name="show_landmarks">Vis kartmerker</string>
    <string name="hide_team_members">Skjul laget</string>
    <string name="show_team_members">Vis laget</string>
    <string name="get_weather">Vis vindretning</string>
    <string name="hide_weather">Skjul vindretning</string>
    <string name="delete_traces">Slett alle spor</string>
    <string name="showcase_title">Gå aktiv</string>
    <string name="showcase_text">Du er nå del av et jaktlag. Aktiver knappen øverst i høyre hjørne når du vil dele din posisjon med resten av laget i sanntid.</string>
    <string name="showcase_button">Jeg forstår</string>
    <string name="update_ad_settings_button">Endre reklamevalg</string>
    <string name="name_help_title">Jegernavn</string>
    <string name="code_help_title">Adgangskode</string>
    <string name="team_help_title">Jaktlag</string>
    <string name="teamname_guide">Alle jegere med samme lagnavn deler sin posisjon og sine kartmerker med hverandre når appen er aktiv.</string>
    <string name="about_intro_header">Om Jaktlaget:</string>
    <string name="about_intro">Jaktlaget er utviklet av Peder Aursand for å være et nyttig verktøy for å se hvor hverandre er i terrenget mens man går på jakt.</string>
    <string name="about_safety_header">Sikkerhet:</string>
    <string name="about_safety">Husk at posisjonene som vises i denne appen er avhengig av både GPS- og telefondekning og kan i noen tilfeller være usikre og utdaterte. ALLTID ha sikker bakgrunn før du skyter på vilt.</string>
    <string name="about_privacy_header">Personvern:</string>
    <string name="about_privacy">Når appen Jaktlaget er aktiv vil ditt jegernavn, dine siste koordinater, og de kartmerker du har valgt å dele, sendes til vår tjener ved jevne mellomrom. All kommunikasjon mellom telefonen og vår tjener er kryptert.
                                 Vi lagrer ingen informasjon om deg til andre formål enn for å gi dine lagkamerater din siste posisjon. Ingen posisjonshistorikk lagres på tjenersiden. Alle data fra inaktive lag slettes etter én måned. Se mer informasjon på:
                                 https://drgaff.net/jaktlaget-privacy/ </string>
    <string name="about_credits_header">Annet:</string>
    <string name="about_credits">Alle terrengkart som brukes i denne applikasjonen kommer fra Kartverkets frie WMS-tjeneste og er ©Kartverket.
                                 Værdata er hentet fra Open Weather Map (openweathermap.org/api) og data fra Meterologisk institutt (met.no). </string>
</resources>