<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single"
        android:id="@+id/me_group">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_landmarks"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_landmarks" />
        </group>
    <group android:checkableBehavior="single"
        android:id="@+id/team_group">
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_team_manage"
            android:icon="@drawable/ic_recent_actors_black_24dp"
            android:title="@string/menu_team_manage" />
        <item
            android:id="@+id/nav_team_landmarks"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/menu_team_landmarks" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/settings_group">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
    </group>

</menu>
