<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="net.ddns.peder.jaktlaget.fragments.TeamFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header_1"
                android:textAppearance="@style/AppTheme.TextStyle"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_1"
                android:textAppearance="@style/AppTheme.TextStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp">
                <ImageView
                    android:id="@+id/help_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/help_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
             <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header_2"
                android:textAppearance="@style/AppTheme.TextStyle"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_2"
                android:textAppearance="@style/AppTheme.TextStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp">
                <ImageView
                    android:id="@+id/help_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                 <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/help_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_header_3"
                android:textAppearance="@style/AppTheme.TextStyle"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_3"
                android:textAppearance="@style/AppTheme.TextStyle" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="330dp">
                <ImageView
                    android:id="@+id/help_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    />
                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />
                <ImageView
                    android:id="@+id/help_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>
            </LinearLayout>

    </ScrollView>
</FrameLayout>
