<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="net.ddns.peder.jaktlaget.fragments.TeamFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:textAppearance="@style/AppTheme.TextStyle" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

                <Button
                    android:id="@+id/new_team_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1.0"
                    android:text="@string/choose_new_team"
                    android:theme="@style/AppTheme.Button"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />
            <Button
                    android:id="@+id/exisiting_team_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_weight="1.0"
                    android:text="@string/intro_join_existing"
                    style="@style/AppTheme.Button"/>

          </LinearLayout>
    </ScrollView>
</FrameLayout>
